# Enhanced-BrickGPT

./: .gitignore  DEVELOP.md  README_sft_mask.md  eval_per_view_iou.py  merge_adapter.py  pyproject.toml  structure.txt  train_sft_text_mask.py
scripts/: diag_mask_ce.py  diag_mask_ce2.py  eval_grpo_table.py  eval_iou_grpo.py  eval_text_mask_iou.py  eval_text_mask_render.py  measure_mask_tokens.py
src/brickgpt/: infer.py  prepare_mask_dataset.py  prepare_mask_dataset_text.py  prepare_text_mask_dataset.py  render_bricks.py  visualize_sample.py
src/brickgpt/data/: brick_structure.py
src/brickgpt/masking/: __init__.py  config.py  dataset.py  mask_encoder.py  projection.py  text_mask.py
src/brickgpt/models/: brickgpt.py  llm.py  masked_brickgpt.py
src/brickgpt/stability_analysis/: stability_analysis.py
src/brickgpt/training/: __init__.py  eval_grpo_text.py  eval_zeroshot_mask.py  generation.py  grpo_masked.py  grpo_text.py  logging_utils.py  render_score.py  rewards.py  semantic.py  sft_masked.py  sft_text_mask.py
tests/: test_grpo_masked.py  test_mask_dataset.py  test_mask_dataset_with_prefixes.py  test_mask_encoder.py  test_mask_projection.py  test_masked_brickgpt.py  test_prefill.py  test_rewards.py  test_sft_masked.py  test_visualize_sample.py
