[project]
name = "brickgpt"
version = "0.1.2"
description = "Official repository for BrickGPT"
readme = "README.md"
authors = [
    { name = "Ava Pun", email = "apun@andrew.cmu.edu" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "bpy",
    "gurobipy",
    "numpy<2", # lower version of numpy needed for bpy
    "open_clip_torch",
    "peft",
    "pillow",
    "torch",
    "torchvision",
    "transformers",
]

[project.optional-dependencies]
finetuning = [
    "trl",
    "wandb",
]

[project.scripts]
infer = "brickgpt.infer:main"
prepare_finetuning_dataset = "brickgpt.prepare_finetuning_dataset:main"
prepare_mask_dataset = "brickgpt.prepare_mask_dataset:main"
render_bricks = "brickgpt.render_bricks:main"
visualize_sample = "brickgpt.visualize_sample:main"
train_sft_masked = "brickgpt.training.sft_masked:main"
train_grpo_masked = "brickgpt.training.grpo_masked:main"
train_grpo_text = "brickgpt.training.grpo_text:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest"]
